--- a/.github/workflows/node-ci-cd.yml
+++ b/.github/workflows/node-ci-cd.yml
@@ -55,6 +55,9 @@ jobs:
             GOOGLE_CLIENT_ID=projects/437124374582/secrets/GOOGLE_CLIENT_ID
             GOOGLE_CLIENT_SECRET=projects/437124374582/secrets/GOOGLE_CLIENT_SECRET
           service_account: oauth2init@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
+          min_instance_count: 0
+          max_instance_count: 1
+          max_instance_request_concurrency: 1
   deploy_oauth2callback:
     runs-on: ubuntu-latest
     needs: build
@@ -82,33 +85,39 @@ jobs:
             GOOGLE_CLIENT_ID=projects/437124374582/secrets/GOOGLE_CLIENT_ID
             GOOGLE_CLIENT_SECRET=projects/437124374582/secrets/GOOGLE_CLIENT_SECRET
           service_account: oauth2callback@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
-  deploy_setCron:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: built
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v2'
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          credentials_json: ${{ secrets.GCP_CREDENTIALS_JSON }}
-      - id: 'deploy_setCron'
-        uses: 'google-github-actions/deploy-cloud-functions@v3'
-        timeout-minutes: 10
-        with:
-          name: setCron
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          runtime: 'nodejs22'
-          environment_variables: |-
-            GCLOUD_PROJECT=${{ secrets.GCP_PROJECT_ID }}
-            DATASTORE_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }}
-            GCF_REGION=${{ secrets.GCF_REGION }}
-          secrets: |-
-            GOOGLE_CLIENT_ID=projects/437124374582/secrets/GOOGLE_CLIENT_ID
-            GOOGLE_CLIENT_SECRET=projects/437124374582/secrets/GOOGLE_CLIENT_SECRET
-          service_account: setcron@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
+          min_instance_count: 0
+          max_instance_count: 1
+          max_instance_request_concurrency: 1
+  # deploy_setCron:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - uses: actions/download-artifact@v4
+  #       with:
+  #         name: built
+  #     - id: 'auth'
+  #       uses: 'google-github-actions/auth@v2'
+  #       with:
+  #         project_id: ${{ secrets.GCP_PROJECT_ID }}
+  #         credentials_json: ${{ secrets.GCP_CREDENTIALS_JSON }}
+  #     - id: 'deploy_setCron'
+  #       uses: 'google-github-actions/deploy-cloud-functions@v3'
+  #       timeout-minutes: 10
+  #       with:
+  #         name: setCron
+  #         project_id: ${{ secrets.GCP_PROJECT_ID }}
+  #         runtime: 'nodejs22'
+  #         environment_variables: |-
+  #           GCLOUD_PROJECT=${{ secrets.GCP_PROJECT_ID }}
+  #           DATASTORE_PROJECT_ID=${{ secrets.GCP_PROJECT_ID }}
+  #           GCF_REGION=${{ secrets.GCF_REGION }}
+  #         secrets: |-
+  #           GOOGLE_CLIENT_ID=projects/437124374582/secrets/GOOGLE_CLIENT_ID
+  #           GOOGLE_CLIENT_SECRET=projects/437124374582/secrets/GOOGLE_CLIENT_SECRET
+  #         service_account: setcron@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
+  #         min_instance_count: 0
+  #         max_instance_count: 1
+  #         max_instance_request_concurrency: 1
   deploy_setEditQuery:
     runs-on: ubuntu-latest
     needs: build
@@ -136,3 +145,6 @@ jobs:
             GOOGLE_CLIENT_ID=projects/437124374582/secrets/GOOGLE_CLIENT_ID
             GOOGLE_CLIENT_SECRET=projects/437124374582/secrets/GOOGLE_CLIENT_SECRET
           service_account: seteditquery@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
+          min_instance_count: 0
+          max_instance_count: 1
+          max_instance_request_concurrency: 1
